--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-test",
   "version": "1.0.0",
-  "main": "src/app.js",
+  "main": "server.js",
   "extension": "js",
   "license": "MIT",
   "type": "commonjs",
@@ -9,8 +9,8 @@
   "private": true,
   "scripts": {
     "prestart": "babel ./src --out-dir dist",
-    "start": "prestart && node ./src/app.js",
-    "start:dev": "nodemon ./src/app.ts",
+    "start": "prestart && node ./server.js",
+    "start:dev": "nodemon ./server.js",
     "lint": "./node_modules/.bin/eslint ./src",
     "pretty": "prettier --write '**/*.{js,json}' '!node_modules/**'",
     "postpretty": "yarn lint --fix",
@@ -22,9 +22,13 @@
     "db:test:restart": "db:test:rm && yarn db:test:up"
   },
   "dependencies": {
+    "argon2": "^0.30.3",
+    "async-jsonwebtoken": "^1.0.1",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.14.3",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
@@ -50,9 +54,13 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.2",
     "sequelize-cli": "^6.5.2"
+  },
+  "_moduleAliases": {
+    "#root": ".",
+    "#app": "src",
+    "#models": "models"
   }
 }
