--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-test",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "src/server.js",
   "extension": "js",
   "license": "MIT",
   "type": "commonjs",
@@ -9,8 +9,9 @@
   "private": true,
   "scripts": {
     "prestart": "babel ./src --out-dir dist",
-    "start": "prestart && node ./server.js",
-    "start:dev": "nodemon ./server.js",
+    "start": "yarn prestart && node ./dist/server.js",
+    "start:no-build": "node ./dist/server.js",
+    "start:dev": "nodemon --exec babel-node ./src/server.js",
     "lint": "./node_modules/.bin/eslint ./src",
     "pretty": "prettier --write '**/*.{js,json}' '!node_modules/**'",
     "postpretty": "yarn lint --fix",
@@ -35,24 +36,22 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0",
     "sequelize-typescript": "^2.1.5",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "@babel/core": "^7.20.12",
+    "@babel/node": "^7.20.7",
+    "@babel/preset-env": "^7.20.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
-    "@babel/core": "^7.20.12",
-    "@babel/node": "^7.20.7",
-    "@babel/preset-env": "^7.20.2",
+    "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/register": "^7.18.9",
     "@babel/runtime": "^7.20.7",
-    "@types/express": "^4.17.15",
-    "@types/morgan": "^1.9.4",
-    "@types/node": "^18.11.18",
-    "@types/sequelize": "^4.28.14",
-    "@types/winston": "^2.4.4",
     "babel-register": "^6.26.0",
-    "eslint": "^8.31.0",
+    "eslint": ">=5.16.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
     "http-status-codes": "^2.2.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.2",
@@ -62,5 +61,6 @@
     "#root": ".",
     "#app": "src",
     "#models": "models"
-  }
+  },
+  "repository": "git@github.com:kotstok/express-skeleton.git"
 }
