--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "express-test",
   "version": "1.0.0",
-  "main": "src/server.js",
-  "extension": "js",
+  "main": "dist/server.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "type": "commonjs",
   "author": "github.com/kotstok",
   "private": true,
   "scripts": {
-    "prestart": "babel ./src --out-dir dist",
-    "start": "yarn prestart && node ./dist/server.js",
-    "start:no-build": "node ./dist/server.js",
-    "start:dev": "nodemon --exec babel-node ./src/server.js",
-    "lint": "./node_modules/.bin/eslint ./src",
+    "build": "tsc -p .",
+    "start": "yarn build && node ./dist/src/server.js",
+    "start:no-build": "node ./dist/src/server.js",
+    "start:dev": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/server.ts",
+    "lint": "eslint \"{src,test}/**/*.ts\" --fix",
     "pretty": "prettier --write '**/*.{js,json}' '!node_modules/**'",
     "postpretty": "yarn lint --fix",
     "db:dev:up": "docker compose --env-file ./.env up dev-db -d",
@@ -23,44 +23,49 @@
     "db:test:restart": "db:test:rm && yarn db:test:up"
   },
   "dependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/node": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "@types/compression": "^1.7.2",
+    "@types/morgan": "^1.9.4",
     "argon2": "^0.30.3",
-    "async-jsonwebtoken": "^1.0.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "compression": "^1.7.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.3",
-    "module-alias": "^2.2.2",
+    "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.28.0",
-    "sequelize-typescript": "^2.1.5",
-    "winston": "^3.8.2",
-    "@babel/core": "^7.20.12",
-    "@babel/node": "^7.20.7",
-    "@babel/preset-env": "^7.20.2"
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/register": "^7.18.9",
     "@babel/runtime": "^7.20.7",
+    "@types/express": "^4.17.16",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.11.18",
+    "@types/validator": "^13.7.11",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "babel-register": "^6.26.0",
-    "eslint": ">=5.16.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "http-status-codes": "^2.2.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.2",
-    "sequelize-cli": "^6.5.2"
-  },
-  "_moduleAliases": {
-    "#root": ".",
-    "#app": "src",
-    "#models": "models"
+    "sequelize-cli": "^6.5.2",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
+    "typescript": "^4.9.5"
   },
   "repository": "git@github.com:kotstok/express-skeleton.git"
 }
