mikroorm and migrations

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 NODE_ENV=development
 PORT=3000
 SERVER_HOSTNAME=localhost
-RATE_LIMIT_REQUEST: 10
+RATE_LIMIT_REQUEST=10
 
 # database
 POSTGRES_VERSION=15
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=5434
 DB_PASSWORD=root
 DB_USERNAME=root
