--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "type": "commonjs",
   "author": "github.com/kotstok",
+  "repository": "git@github.com:kotstok/express-skeleton.git",
   "private": true,
   "scripts": {
     "build": "tsc -p .",
@@ -16,21 +17,24 @@
     "pretty": "prettier --write '**/*.{js,json}' '!node_modules/**'",
     "postpretty": "yarn lint --fix",
     "db:dev:up": "docker compose --env-file ./.env up dev-db -d",
-    "db:dev:rm": "docker compose rm dev-db -s -f -v && docker container rm dev-db -f -v",
+    "db:dev:rm": "docker compose rm dev-db -s -f -v",
     "db:dev:restart": "yarn db:dev:rm && yarn db:dev:up",
     "db:test:up": "docker compose --env-file ./.env.test up test-db -d",
-    "db:test:rm": "docker compose rm test-db -s -f -v && docker container rm test-db -f -v",
+    "db:test:rm": "docker compose rm test-db -s -f -v",
     "db:test:restart": "db:test:rm && yarn db:test:up"
   },
   "dependencies": {
     "@babel/core": "^7.20.12",
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
+    "@mikro-orm/cli": "^5.6.11",
+    "@mikro-orm/core": "^5.6.11",
+    "@mikro-orm/migrations": "^5.6.11",
+    "@mikro-orm/postgresql": "^5.6.11",
     "@types/compression": "^1.7.2",
     "@types/morgan": "^1.9.4",
     "argon2": "^0.30.3",
     "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.1",
     "compression": "^1.7.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -41,7 +45,6 @@
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.28.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
@@ -62,10 +65,15 @@
     "http-status-codes": "^2.2.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.2",
-    "sequelize-cli": "^6.5.2",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.5"
   },
-  "repository": "git@github.com:kotstok/express-skeleton.git"
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/mikro-orm.config.ts",
+      "./dist/mikro-orm.config.js"
+    ]
+  }
 }
